--- a/Simley_Foundation/Smiley/templates/html/Profile.html
+++ b/Simley_Foundation/Smiley/templates/html/Profile.html
@@ -1,18 +1,39 @@
 {% extends 'html/base.html' %}
 {% block title %}Profile{% endblock %}
 {% block content %}
+
 <div class="container">
 	<div class="row">
-		<div class=" card col-md-6 shadow-lg">
-			<h3 class="bg-info text-white shadow-lg text-light border rounded"></h3>
+		<div class="col-md-4 h-20 mt-4 card shadow-lg mx-1">
+			<h3 class="p-2 bg-warning text-center text-light border rounded my-2">Info</h3>
+			<img src="{{user.improfile.impf.url}}" height="200px" width="100%">
 			<div class="card-body">
-				<h3 style="display: block" class="text-success text-center"> Hai {{user.username}}</h4>
-				<label><h4>Email</h4></label>
-				<h5 class="form-control">  {{user.email}}</h5>
-				<a href="{% url 'myorders' %}">Click here to check your orders</a>
+				<h4>Hi {{user.username}}</h4>
+				<div class="row">
+					<div class="col">
+						<a href="{% url 'dsh' %}" class="form-control m-2 btn btn-info text-light">Back</a>
+					</div>
+					<div class="col">
+						<a href="{% url 'UpdateProfile' %}" class="form-control m-2 btn btn-secondary text-light">Update</a>
+					</div>
+				</div>
 			</div>
-				<a href="{% url 'updatepf' %}" class="btn btn-info">Update your profile here</a>
+		</div>
+		<div class="col-md mt-4 mb-3 card shadow-lg mx-1">
+			<h3 class="p-2 bg-info text-center text-light border rounded my-2">User Details</h3>
+			<table class="table table-borderless">
+				<tr>
+					<th>Username</th>
+					<td>{{user.username}}</td>
+				</tr>
+				<tr>
+					<th>Age</th>
+					<td>{{user.improfile.age}}</td>
+				</tr>
+			</table>
+			
+		
+		</div>
 	</div>
-	
-</div>	
+</div>
 {% endblock %}
